Foratting changed and renamed files

--- a/1.crypto.md
+++ b/1.crypto.md
@@ -30,9 +30,10 @@ Bob encrypts a message using a shared key. Alice decrypts it using the same key.
 **Modes of Operation**:
 1. **ECB (Electronic Codebook)**: Simple but prone to pattern leaks.
    * weakest mode. Shouldn't be used. 
-   * Prone Collision and inference attacks.
+   * it lacks diffusion, meaning that identical plaintext blocks will always result in identical ciphertext blocks leading to inference attacks.
 2. **CBC (Cipher Block Chaining)**: Links blocks for better security.
    * Depends on previous cipher text. If one block of cipher text is corrupted, it will proggress to all future blocks.
+   * vulnerable to padding oracle attack
    ![alt text](image-1.png)
 
 3. **CTR (Counter Mode)**: Supports parallel processing.
@@ -118,7 +119,7 @@ X.509 certificate
 ### Message Authentication Code (MAC)
 - **Purpose**: Verifies message integrity using a symmetric key.
 - **Algorithms**: MD5, SHA-1, SHA-256.
-
+   - MD5 and SHA-1 are prone to collision attack
 ### Hashed Message Authentication Code (HMAC)
 - **Purpose**: Enhances MAC by combining the message with a secret key before hashing.
 - **Formula**: `hash(o_key_pad || hash(i_key_pad || message))`
