Reorganized Threat modeling document

--- a/2.Kubernetes Security.md
+++ b/2.Kubernetes Security.md
@@ -1,3 +1,9 @@
+https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
+https://docs.aws.amazon.com/whitepapers/latest/security-practices-multi-tenant-saas-applications-eks/apply-selinux-profiles-to-containers.html
+Taint in k8s?
+node selector or affinity rules in k8s pod spec?
+
+
 podman
 
 kubectlproxy - proxy between local host and APi server
@@ -99,6 +105,7 @@ Citations:
 [19] https://kubernetes.io/docs/concepts/security/
 [20] https://www.civo.com/learn/network-policies-kubernetes
 
+https://www.youtube.com/watch?v=nwgWx5sqdOA
 
 EKS:
 Pod identity agent
