--- a/1.crypto.md
+++ b/1.crypto.md
@@ -1,13 +1,11 @@
 # Cryptographic Algorithms and Protocols: An Overview
 
-Cryptography forms the backbone of secure communication and data protection in the digital world. Below is an overview of key cryptographic paradigms, their advantages, disadvantages, and applications.
-
 ---
 
 ## Symmetric Cryptography
 
 **Description**:  
-Symmetric cryptography uses a single key for both encryption and decryption. Both the sender and recipient share this secret key securely.
+Symmetric cryptography uses a single key for both encryption and decryption. Both the sender and recipient have to share this secret key securely.
 
 
 **Example**:  
@@ -23,8 +21,8 @@ Bob encrypts a message using a shared key. Alice decrypts it using the same key.
 3. **No Authentication**: Does not verify the sender's identity, lacking non-repudiation and integrity.
 
 ### Block Cipher Algorithms:
-- **DES**: Operates with a 64-bit block size.
-- **3DES**: Enhances DES security by applying encryption three times.
+- **DES**: Operates with a 64-bit block size. (56 bit key). Vulnerable to bruteforce due to the short key length in modern computing. 
+- **3DES**: Enhances DES security by applying encryption three times. Effective key length is 112 or 168
 - **AES**: Supports key sizes of 128bits(10 rounds), 192bits(12 rounds), and 256bits(14 rounds) bits.
 
 **Modes of Operation**:
@@ -32,22 +30,28 @@ Bob encrypts a message using a shared key. Alice decrypts it using the same key.
    * weakest mode. Shouldn't be used. 
    * it lacks diffusion, meaning that identical plaintext blocks will always result in identical ciphertext blocks leading to inference attacks.
 2. **CBC (Cipher Block Chaining)**: Links blocks for better security.
-   * Depends on previous cipher text. If one block of cipher text is corrupted, it will proggress to all future blocks.
-   * vulnerable to padding oracle attack
+
    ![alt text](image-1.png)
+   
+   * Depends on previous cipher text. If one block of cipher text is corrupted, it will proggress to all future blocks.
+   * vulnerable to padding oracle attack. PKCS#7 padding
+
+
 
 3. **CTR (Counter Mode)**: Supports parallel processing.
    * Overcomes the disadvantage of CBC by encrypting a counter and XOR with plain text block
    * Disadvantage - Doesn't have integrity check (Bit flipping attacks)
+
    ![alt text](image-2.png)
 4. **GCM (Galois Counter Mode)**: Combines encryption with integrity. (GMAC)
    * IV is 96 bits + counter is 32 bits = 128bit block. 
    * IV should be truly random (entropy)
+
    ![alt text](image.png)
 
 
 ### Stream cipher Algorithms
-- **RC4**: A modern symmetric-key stream cipher used in wireless networks and SSL protocols. It was developed in 1987 by Ron Rivest, who also helped create the RSA public-key cipher. While RC4 is still used, it has many known vulnerabilities. 
+- **RC4**: A modern symmetric-key stream cipher used in wireless networks and SSL protocols. While RC4 is still used, it has many known vulnerabilities. 
 - **A5/1**: A stream cipher used for voice encryption in GSM mobile phones. 
 - **ChaCha20**: A modified version of Salsa20 that is supported in TLS 1.3. 
 - **LILI-128**: A stream cipher with a 128-bit key that is resistant to known attacks. It is easy to implement in software or hardware.
