--- a/3.Linux.md
+++ b/3.Linux.md
@@ -1,3 +1,8 @@
+# DAC
+Users have direct control over access to their own data. Users can assign access rights to other users, and resource owners can restrict access based on user identity. DAC is easier to implement and maintain, but it's less secure than MAC. DAC is often used in industries where users need more flexibility and control over access rights. 
+# MAC
+System administrators or software developers control access decisions. Access is restricted based on the clearance of the subjects. MAC is more secure than DAC, but it's more difficult to implement and maintain. MAC is often used in military and government environments, where strict data confidentiality is required. 
+
 # SELinux (Security-Enhanced Linux)
 
 ## Overview
