--- a/8.threat-modeling.md
+++ b/8.threat-modeling.md
@@ -34,8 +34,15 @@
     hijacking
     denial of service
 
+## Threat Grammer
+```[threat source] [prerequisites] can [threat action] which leads to [threat impact], negatively impacting [impacted assets].```
 
+Example:
+
+```An [internal threat actor] [who has administrator access] can [tamper with data stored in the database] which leads to [modifying the username for the all-time high score], negatively impacting [the video game high score list]```
 ## Theat Rating
+Common threat rating formula
+
 Risk = Threat likelihood x Impact
 
 **DREAD:** 
