--- a/2.Kubernetes Security.md
+++ b/2.Kubernetes Security.md
@@ -14,6 +14,18 @@ Secure the containers
 Secure the endpoints (Other operations) 
 Dynamic testing
 
+## Security context 
+- Discretionary Access Control: Permission to access an object, like a file, is based on user ID (UID) and group ID (GID).
+- Security Enhanced Linux (SELinux): Objects are assigned security labels.
+- Running as privileged or unprivileged.
+- Linux Capabilities: Give a process some privileges, but not all the privileges of the root user.
+- AppArmor: Use program profiles to restrict the capabilities of individual programs.
+- Seccomp: Filter a process's system calls.
+- allowPrivilegeEscalation: Controls whether a process can gain more privileges than its parent process. This bool directly controls whether the no_new_privs flag gets set on the container process. 
+    - allowPrivilegeEscalation is always true when the container:
+        - is run as privileged, or
+        - has CAP_SYS_ADMIN
+- readOnlyRootFilesystem: Mounts the container's root filesystem as read-only.
 
 Kubernetes Security Architecture and Best Practices:
 
