--- a/1.crypto.md
+++ b/1.crypto.md
@@ -26,13 +26,14 @@ Bob encrypts a message using a shared key. Alice decrypts it using the same key.
 - **AES**: Supports key sizes of 128bits(10 rounds), 192bits(12 rounds), and 256bits(14 rounds) bits.
 
 **Modes of Operation**:
-1. **ECB (Electronic Codebook)**: Simple but prone to pattern leaks.
+1. **ECB (Electronic Codebook)**:
+   * Simple but prone to pattern leaks.
    * weakest mode. Shouldn't be used. 
    * it lacks diffusion, meaning that identical plaintext blocks will always result in identical ciphertext blocks leading to inference attacks.
 2. **CBC (Cipher Block Chaining)**: Links blocks for better security.
 
    ![alt text](image-1.png)
-   
+
    * Depends on previous cipher text. If one block of cipher text is corrupted, it will proggress to all future blocks.
    * vulnerable to padding oracle attack. PKCS#7 padding
 
