--- a/1.crypto.md
+++ b/1.crypto.md
@@ -34,7 +34,8 @@ Bob encrypts a message using a shared key. Alice decrypts it using the same key.
 
    ![alt text](image-1.png)
 
-   * Depends on previous cipher text. If one block of cipher text is corrupted, it will proggress to all future blocks.
+   * slow since it is sequential encryption. Depends on previous cipher text.
+   * If one block of cipher text is corrupted, it will proggress to all future blocks.
    * vulnerable to padding oracle attack. PKCS#7 padding
 
 
